frontend/static/css/yourworld.css
* {
    margin: 0;
    padding: 0;
}
body {
    background: #ccc;
}
img {
    border: 0;
    text-decoration: none;
}
a,
a:link,
a:hover,
a:active,
a:visited {
    text-decoration: none;
    color: inherit;
}
#topbar {
    position: relative;
    top: 0;
    width: 100%;
}
#topbar_inner {
    width: 100%;
    position: absolute;
}
#announce {
    text-align: center;
}
#announce_close {
    font-size: 11px;
    font-weight: bold;
    color: #636060;
    background-color: #C5C2C2;
    border-radius: 2px;
    padding: 0 3px;
}
#announce_close:hover {
    background: #928E8E;
    color: white;
    cursor: pointer;
}
.ui {
    color: #888;
    font-family: Verdana;
    font-size: 12px;
    z-index: 1;
}
.ui-vis {
    background-color: rgba(0, 0, 255, .1);
    padding: 2px;
}
.tab {
    padding-top: 0;
    top: 0px;
    position: absolute;
}
#paused {
    left: 2px;
    display: none;
}
.message {
    margin-left: auto;
    margin-right: auto;
    padding: 5px 0px;
    width: 60%;
    text-align: center;
    background: #E5E5FF;
    color: #333;
}
.message a {
    color: blue;
}
#announce {
    display: none;
}
#loading {
    font-family: Verdana;
}
#coords {
    display: none;
    position: absolute;
    bottom: 0;
    right: 0;
    color: #555;
    background: #E5E5FF;
}
.menu {
    right: 0;
    display: none;
}
#menu {
    cursor: pointer;
}
#menu.hover {
    color: #555;
    background: #E5E5FF;
    border-left: 1px solid #ccc;
}
#nav {
    display: none;
    position: absolute;
    text-align: right;
    top: 1.5em;
    background: #E5E5FF;
    width: 8em;
    color: #555;
    border-left: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
}
#nav li {
    display: block;
    list-style: none;
    position: relative;
    cursor: pointer;
    border-top: 1px solid #ccc;
}
#nav li:first-child {
    border-top: 0;
}
#nav a {
    display: block;
}
* html #nav ul {
    line-height: 0;
}
#nav li.hover {
    background-color: white;
}
#simplemodal-overlay {
    background-color: #000;
    cursor: default;
}
#simplemodal-container {
    color: #333;
    background-color: #e5e5ff;
    border: 6px solid #c3c3ff;
    padding: 12px;
}
#simplemodal-container a {
    color: #ddd;
}
.simplemodal-closelink {
    color: blue;
    text-decoration: underline;
    cursor: pointer
}
.simplemodal-closebutton {
    position: absolute;
    top: -15px;
    right: -15px;
    cursor: pointer;
    font-size: 160%;
}
#goto_submit {
    margin-left: 1em;
    margin-top: 3px;
}
#protect_precision {
    position: absolute;
    left: 0px;
    top: 30px;
    width: 110px;
    height: 47px;
    background-color: #626262;
    color: white;
}
.protect_button {
    position: absolute;
    top: 23px;
    border: solid;
    width: 40px;
    border-width: 1px;
    text-align: center;
    cursor: pointer;
}
.auto_prog_panel {
    position: absolute;
    left: 0px;
    top: 90px;
    width: 150px;
    height: 30px;
    background-color: rgb(104, 104, 104);
    text-align: center;
    color: white;
}
#chat_open {
    position: absolute;
    bottom: 0px;
    left: 0px;
    width: 70px;
    text-align: center;
    background-color: #003399;
    color: white;
    height: 20px;
    border-style: solid;
    border-width: 1px;
    border-color: #000033;
    cursor: default;
}
#chat_open:hover {
    background-color: #2763dc;
}
#chat_open:active {
    background-color: #0e2961;
}
.chat_tab_button {
    position: absolute;
    top: 4px;
    border-style: solid;
    border-color: black;
    border-width: 1px;
    width: 75px;
    text-align: center;
    font-family: verdana;
    font-size: 13px;
    width: 80px;
    cursor: default;
}
.chatfield {
    position: absolute;
    top: 27px;
    left: 3px;
    width: 45px;
    height: 43px;
    border-style: solid;
    border-width: 1px;
    background-color: white;
    width: 392px;
    height: 243px;
    overflow: scroll;
    overflow-x: hidden;
}
.unread {
    color: red;
    font-size: 11px;
}
#chat_window {
    position: absolute;
    bottom: 0px;
    left: 0px;
    background-color: #e0e0e0;
    width: 400px;
    height: 300px;
    border-style: solid;
    border-width: 1px;
    display: none;
}
#chat_close {
    background-color: red;
    width: 20px;
    height: 20px;
    position: absolute;
    right: 3px;
    top: 2px;
    text-align: center;
    color: white;
    font-family: monospace;
    font-size: 16px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    cursor: default;
}
#confirm_js {
    width: 441px;
    height: 256px;
    position: absolute;
    background-color: #dbdbdb;
    border-width: 2px;
    border-style: solid;
    border-color: black;
    top: 50px;
    left: 100px;
}
#confirm_js_code {
    background-color: #e6e6e6;
    position: absolute;
    width: 365px;
    height: 90px;
    top: 100px;
    left: 35px;
    padding: 3px;
    font-family: "Courier New", monospace;
    word-wrap: break-word;
    word-break: break-all;
    overflow: scroll;
    overflow-x: hidden;
}
#confirm_js_cancel {
    position: absolute;
    font-family: Helvetica;
    background-color: green;
    border-style: solid;
    width: 100px;
    height: 30px;
    top: 200px;
    left: 300px;
    border-width: 1px;
    padding: 7px;
    text-align: center;
    font-size: 25px;
    color: white;
    border-color: black;
    cursor: pointer;
}
#confirm_js_cancel_x {
    background-color: red;
    width: 20px;
    height: 20px;
    position: absolute;
    right: 3px;
    top: 2px;
    text-align: center;
    color: white;
    font-family: monospace;
    font-size: 16px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    cursor: pointer;
}
#confirm_js_msg {
    text-align: center;
    position: absolute;
    left: 20px;
    font-family: verdana;
    top: 40px;
}
#confirm_js_cancel:hover {
    background-color: #00AE00;
}

